Commit Last Changes

--- a/Serene1/Serene1.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
+++ b/Serene1/Serene1.Web/Modules/Common/Dashboard/DashboardIndex.cshtml
@@ -5,34 +5,32 @@
 }
 
 @section Head {
-<link rel="stylesheet" href="~/Scripts/iCheck/flat/blue.css">
-<link rel="stylesheet" href="~/Scripts/morris/morris.css">
-<link rel="stylesheet" href="~/Scripts/jvectormap/jquery-jvectormap-1.2.2.css">
-<link rel="stylesheet" href="~/Scripts/datepicker/datepicker3.css">
-<link rel="stylesheet" href="~/Scripts/daterangepicker/daterangepicker-bs3.css">
-<link rel="stylesheet" href="~/Scripts/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-<script src="~/Scripts/raphael/raphael-min.js"></script>
-<script src="~/Scripts/morris/morris.min.js"></script>
-<script src="~/Scripts/sparkline/jquery.sparkline.min.js"></script>
-<script src="~/Scripts/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="~/Scripts/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-<script src="~/Scripts/knob/jquery.knob.js"></script>
-<script src="~/Scripts/daterangepicker/moment.min.js"></script>
-<script src="~/Scripts/daterangepicker/daterangepicker.js"></script>
-<script src="~/Scripts/datepicker/bootstrap-datepicker.js"></script>
-<script src="~/Scripts/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
-<script src="~/Scripts/adminlte/pages/dashboard.js"></script>
-<script src="~/Scripts/adminlte/demo.js"></script>
+    <link rel="stylesheet" href="~/Scripts/iCheck/flat/blue.css">
+    <link rel="stylesheet" href="~/Scripts/morris/morris.css">
+    <link rel="stylesheet" href="~/Scripts/jvectormap/jquery-jvectormap-1.2.2.css">
+    <link rel="stylesheet" href="~/Scripts/datepicker/datepicker3.css">
+    <link rel="stylesheet" href="~/Scripts/daterangepicker/daterangepicker-bs3.css">
+    <link rel="stylesheet" href="~/Scripts/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <script src="~/Scripts/raphael/raphael-min.js"></script>
+    <script src="~/Scripts/morris/morris.min.js"></script>
+    <script src="~/Scripts/sparkline/jquery.sparkline.min.js"></script>
+    <script src="~/Scripts/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+    <script src="~/Scripts/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="~/Scripts/knob/jquery.knob.js"></script>
+    <script src="~/Scripts/daterangepicker/moment.min.js"></script>
+    <script src="~/Scripts/daterangepicker/daterangepicker.js"></script>
+    <script src="~/Scripts/datepicker/bootstrap-datepicker.js"></script>
+    <script src="~/Scripts/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+    <script src="~/Scripts/adminlte/pages/dashboard.js"></script>
+    <script src="~/Scripts/adminlte/demo.js"></script>
 }
 
 @section ContentHeader {
     <h1>@LocalText.Get("Navigation.Dashboard")<small>@Html.Raw(Texts.Site.Dashboard.ContentDescription)</small></h1>
 }
 
-<!-- Small boxes (Stat box) -->
 <div class="row">
     <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-aqua">
             <div class="inner">
                 <h3>@Model.OpenOrders</h3>
@@ -43,9 +41,8 @@
             </div>
             <a href="~/Northwind/Order?shippingState=0" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
         </div>
-    </div><!-- ./col -->
+    </div>
     <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-green">
             <div class="inner">
                 <h3>@Model.ClosedOrderPercent<sup style="font-size: 20px">%</sup></h3>
@@ -58,7 +55,6 @@
         </div>
     </div><!-- ./col -->
     <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-yellow">
             <div class="inner">
                 <h3>@Model.CustomerCount</h3>
@@ -71,7 +67,6 @@
         </div>
     </div><!-- ./col -->
     <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
         <div class="small-box bg-red">
             <div class="inner">
                 <h3>@Model.ProductCount</h3>
@@ -84,25 +79,19 @@
         </div>
     </div><!-- ./col -->
 </div><!-- /.row -->
-<!-- Main row -->
 <div class="row">
-    <!-- Left col -->
     <section class="col-lg-7 connectedSortable">
-        <!-- Custom tabs (Charts with tabs)-->
         <div class="nav-tabs-custom">
-            <!-- Tabs within a box -->
             <ul class="nav nav-tabs pull-right">
                 <li class="active"><a href="#revenue-chart" data-toggle="tab">Area</a></li>
                 <li><a href="#sales-chart" data-toggle="tab">Donut</a></li>
                 <li class="pull-left header"><i class="fa fa-inbox"></i> Sales</li>
             </ul>
             <div class="tab-content no-padding">
-                <!-- Morris chart - Sales -->
                 <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px;"></div>
                 <div class="chart tab-pane" id="sales-chart" style="position: relative; height: 300px;"></div>
             </div>
         </div><!-- /.nav-tabs-custom -->
-        <!-- Chat box -->
         <div class="box box-success">
             <div class="box-header">
                 <i class="fa fa-comments-o"></i>
@@ -137,7 +126,6 @@
                         </div>
                     </div><!-- /.attachment -->
                 </div><!-- /.item -->
-                <!-- chat item -->
                 <div class="item">
                     <img src="~/Content/adminlte/img/avatar2.png" alt="user image" class="offline">
                     <p class="message">
@@ -191,18 +179,15 @@
             <div class="box-body">
                 <ul class="todo-list">
                     <li>
-                        <!-- drag handle -->
+
                         <span class="handle">
                             <i class="fa fa-ellipsis-v"></i>
                             <i class="fa fa-ellipsis-v"></i>
                         </span>
-                        <!-- checkbox -->
                         <input type="checkbox" value="" name="">
                         <!-- todo text -->
                         <span class="text">Design a nice theme</span>
-                        <!-- Emphasis label -->
                         <small class="label label-danger"><i class="fa fa-clock-o"></i> 2 mins</small>
-                        <!-- General tools such as edit or delete-->
                         <div class="tools">
                             <i class="fa fa-edit"></i>
                             <i class="fa fa-trash-o"></i>
@@ -279,12 +264,10 @@
                 <button class="btn btn-default pull-right"><i class="fa fa-plus"></i> Add item</button>
             </div>
         </div><!-- /.box -->
-        <!-- quick email widget -->
         <div class="box box-info">
             <div class="box-header">
                 <i class="fa fa-envelope"></i>
                 <h3 class="box-title">Quick Email</h3>
-                <!-- tools box -->
                 <div class="pull-right box-tools">
                     <button class="btn btn-info btn-sm" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
                 </div><!-- /. tools -->
@@ -307,12 +290,9 @@
             </div>
         </div>
     </section><!-- /.Left col -->
-    <!-- right col (We are only adding the ID to make the widgets sortable)-->
     <section class="col-lg-5 connectedSortable">
-        <!-- Map box -->
         <div class="box box-solid bg-light-blue-gradient">
             <div class="box-header">
-                <!-- tools box -->
                 <div class="pull-right box-tools">
                     <button class="btn btn-primary btn-sm daterange pull-right" data-toggle="tooltip" title="Date range"><i class="fa fa-calendar"></i></button>
                     <button class="btn btn-primary btn-sm pull-right" data-widget="collapse" data-toggle="tooltip" title="Collapse" style="margin-right: 5px;"><i class="fa fa-minus"></i></button>
@@ -342,8 +322,6 @@
                 </div><!-- /.row -->
             </div>
         </div>
-        <!-- /.box -->
-        <!-- solid sales graph -->
         <div class="box box-solid bg-teal-gradient">
             <div class="box-header">
                 <i class="fa fa-th"></i>
@@ -432,9 +410,9 @@
                         <div class="progress xs">
                             <div class="progress-bar progress-bar-green" style="width: 40%;"></div>
                         </div>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->
+                    </div>
+                </div>
             </div>
-        </div><!-- /.box -->
-    </section><!-- right col -->
-</div><!-- /.row (main row) -->
+        </div>
+    </section>
+</div>
