--- a/Serene1/Serene1.Web/Views/Shared/LeftNavigation.cshtml
+++ b/Serene1/Serene1.Web/Views/Shared/LeftNavigation.cshtml
@@ -22,8 +22,9 @@ var target = item.Target; if (target != null) { target += " target=" + target; }
     <a href="@sectionUrl"@target>
         <i class="fa @(icon)"></i>
         <span>@title</span>
-        @if (!item.Children.IsEmptyOrNull()) {
-        <i class="fa fa-angle-left pull-right"></i>
+        @if (!item.Children.IsEmptyOrNull())
+        {
+            <i class="fa fa-angle-left pull-right"></i>
         }
     </a>
 
